index changes: change dividers/buttons to classes

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
         
         <!-- CONTENT: SITE LINKS -->
         <div class="options">
-        <a href="bio.html" id="button">
+        <a href="bio.html" class="button">
             <div>
                 Bio
             </div>
         </a>
-        <div id="divider"></div>
-        <a href="resume.html" id="button">
+        <div class="divider"></div>
+        <a href="resume.html" class="button">
             <div>
                 Resume
             </div>
         </a>
-        <div id="divider"></div>
-        <a href="www.soundcloud.com/mark-freeman-48" id="button">
+        <div class="divider"></div>
+        <a href="www.soundcloud.com/mark-freeman-48" class="button">
             <div>
                 Music
             </div>
         </a>
-        <div id="divider"></div>
-        <a href="portfolio.html" id="button">
+        <div class="divider"></div>
+        <a href="portfolio.html" class="button">
             <div>
                 Portfolio
             </div>
