CSS index changes: change dividers/buttons to classes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<body>
         <!-- HEADER: PAGE NAME-->
-        <div class="top-backboard" id="backboard"></div>
+        <div id="top-backboard" class="backboard"></div>
         <div class=header>
         <h1 id="name">Home - Elle Freeman</h1>
         </div>
