Moved descriptions into li elements

--- a/resume.html
+++ b/resume.html
@@ -57,36 +57,41 @@
    	        <h5> EXPERIENCE </h5>
    	            <h3>Work</h3>
                 <ul>
-                    <li><span>Graphic Design Intern</span> (2016 - Present), Tufts University, Medford MA</li>
+                    <li><span>Graphic Design Intern</span> (2016 - Present), Tufts University, Medford MA
                     <p>
                     Responsible for designing posters, fliers, logos, and other graphic work for the Tufts Women's Center. 
                     </p>
-                    <li><span>Web Designer </span> (2016 - Present)</li>
-                    <p>Freelance work in designing webpages with intuitive and responsive design.</p>
-                    <li><span>Composer & Arranger</span> (2016 - Present)</li>
+                    </li>
+                    <li><span>Web Designer </span> (2016 - Present)
+                    <p>Freelance work in designing webpages with intuitive and responsive design.</p>    
+                    </li>
+                    <li><span>Composer & Arranger</span> (2016 - Present)
                     <p>Working to score a podcast, as well as taking personal commissions</p>
-                    <li><span>Boeing Company Intern</span> (2014), El Segundo, California</li>
-                    <p>Selected by Boeing as one of six students for a mechanical analyst internship; tested and analyze designs for Boeing satellites.</p>
+                    </li>
+                    <li><span>Boeing Company Intern</span> (2014), El Segundo, California
+                    <p>Selected by Boeing as one of six students for a mechanical analyst internship; tested and analyze designs for Boeing satellites.</p></li>
                 </ul>
                 <h3>Volunteer</h3>
                 <ul>
-                    <li><span>Bike Mechanic</span> (2012 - 2014), Bikerowave, Los Angeles CA</li>
+                    <li><span>Bike Mechanic</span> (2012 - 2014), Bikerowave, Los Angeles CA
                     <p>
                     Repaired bikes, mentored incoming volunteers, worked register
                     </p>
-                    <li><span>Physics Tutor </span>(2013 - 2014), Los Angeles CA</li>
+                    </li>
+                    <li><span>Physics Tutor </span>(2013 - 2014), Los Angeles CA
                     <p>
                     Tutored high school students in physics, mechanics and electromagnetism
-                    </p>
+                    </p></li>
                 </ul>
                 <h3>Leadership</h3>
                 <ul>
-                    <li><span>Spoken Word Alliance at Tufts</span></li>
+                    <li><span>Spoken Word Alliance at Tufts</span>
                     <p>Treasurer, Writer, Performer</p>
-                    <li><span>Tufts QSA</span></li>
-                    <p>Board member</p>
-                    <li><span>Tufts Trans Discussion Group</span></li>
-                    <p>Facilitator, liaison</p>
+                    </li>
+                    <li><span>Tufts QSA</span>
+                    <p>Board member</p></li>
+                    <li><span>Tufts Trans Discussion Group</span>
+                    <p>Facilitator, liaison</p></li>
                     <li><span>Tufts Trans Task Force</span></li>
                 </ul>
    	            
