fixed music link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </a>
         <div class="divider"></div>
-        <a href="www.soundcloud.com/mark-freeman-48" class="button">
+        <a href="https://www.soundcloud.com/mark-freeman-48" class="button">
             <div>
                 Music
             </div>
