--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             </div>
         </a>
         <div class="divider"></div>
-        <a href="portfolio.html" class="button">
+        <a href="https://www.linkedin.com/in/mark-freeman-4a701167?authType=name&authToken=JE8I" class="button">
             <div>
-                Portfolio
+                LinkedIn
             </div>
         </a>
         </div>
