Updated resume and site colors

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="SCSS/main.css"/>
-		<title>Home - Elle Freeman</title>
+		<title>Mar Freeman</title>
         <meta charset="utf-8">
 	</head>
 	
@@ -10,10 +10,9 @@
         <!-- HEADER: PAGE NAME-->
         <div id="top-backboard" class="backboard"></div>
         <div class=header>
-        <h1 id="name">Home - Elle Freeman</h1>
+        <h1 id="name">Home - Mark Freeman</h1>
         </div>
         <div id="wrapper"></div>
-        
         <!-- CONTENT: SITE LINKS -->
         <div class="options">
         <a href="bio.html" class="button">
@@ -22,7 +21,7 @@
             </div>
         </a>
         <div class="divider"></div>
-        <a href="resume.html" class="button">
+        <a href="2017Resume.pdf" class="button">
             <div>
                 Resume
             </div>
